# 67427310

Homework.chats/W3 Homework/: 0001-design.md  0002-implementation-plan.md
Homework.chats/W5 Homework/: 0002-pg-mcp-design_fix.md  w5.homwork.chats
w2homework/backend/: pyproject.toml
w2homework/docs/: ARCHITECTURE_INDEX.md  QUICK_REFERENCE.md
w2homework/fixtures/: README.md
w2homework/frontend/: package-lock.json  vite.config.ts
w3homework/: PHASE3_IMPLEMENTATION.md
w3homework/docs/: ARCHITECTURE_REDESIGN.md  ARCHITECTURE_SUMMARY.md  CLASS_DIAGRAM.md  MYSQL_SUPPORT.md  (+2 more)
w5homework/: .env.example  .gitignore  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  Dockerfile  PHASE_10_SUMMARY.md  QUICKSTART.md  README.md  SHUTDOWN_FIX.md  claude_desktop_config.json  docker-compose.yml  main.py  pyproject.toml  test_shutdown.py
w5homework/fixtures/: 01_small_db.sql  02_medium_db.sql  03_large_db.sql  Makefile  README.md  TEST_QUERIES.md  TEST_RESULTS.md
w5homework/src/pg_mcp/: __init__.py  __main__.py  server.py
w5homework/src/pg_mcp/cache/: __init__.py  schema_cache.py
w5homework/src/pg_mcp/config/: __init__.py  settings.py
w5homework/src/pg_mcp/db/: __init__.py  introspection.py  manager.py  pool.py
w5homework/src/pg_mcp/models/: __init__.py  errors.py  query.py  schema.py
w5homework/src/pg_mcp/observability/: __init__.py  logging.py  metrics.py  tracing.py
w5homework/src/pg_mcp/prompts/: __init__.py  result_validation.py  sql_generation.py
w5homework/src/pg_mcp/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py
w5homework/src/pg_mcp/services/: __init__.py  orchestrator.py  result_validator.py  sql_executor.py  sql_generator.py  sql_validator.py
w5homework/tests/: conftest.py
w5homework/tests/e2e/: test_mcp.py
w5homework/tests/integration/: test_full_flow.py
w5homework/tests/unit/: test_config.py  test_connection_manager.py  test_models.py  test_orchestrator.py  test_resilience.py  test_schema_cache.py  test_sql_executor.py  test_sql_generator.py  test_sql_validator.py  test_sql_validator_extras.py
(+15 files in other folders)
