[project]
name = "pg-mcp"
version = "0.2.1"
description = "PostgreSQL MCP Server - Natural Language to SQL"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "sqlglot>=28.5.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "openai>=2.14.0",
    "prometheus-client>=0.23.0",
    "fastmcp>=2.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[project.scripts]
pg-mcp = "pg_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",     # pyflakes, pycodestyle
    "I",     # isort
    "B",
    "C4",    # bugbear, comprehensions
    "UP",    # pyupgrade
    "SIM",   # simplify
    "TCH",   # type-checking imports
    "RUF",   # ruff-specific
    "S",     # security (bandit)
    "ASYNC", # async best practices
]
ignore = ["RUF022"] # Allow organized __all__ with comments

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "S105",
    "S106",
] # allow assert and hardcoded passwords in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sqlglot.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require database and API key)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "@abstractmethod"]
fail_under = 80
